--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -1147,3 +1147,8 @@ body .ui-tooltip {
 .display-block {
     display: block !important;
 }
+/* Google Docs */
+.googledocs-integration-columns{
+    vertical-align: middle;
+    line-height: 31px;
+}
