--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -1,5 +1,5 @@
 /**
- * @version 2.2.0
+ * @version 2.2.3
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2016 Perfect Web sp. z o.o., All rights reserved. https://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -981,11 +981,14 @@ span.pweb-free {
 }
 
 
-code {
+pre, code {
     background-color: #f7f7f9;
     border: 1px solid #e1e1e8;
     border-radius: 3px;
-    color: #d14;
+    color: #000;
+}
+code, pre var {
+	color: #d14;
 }
 
 
@@ -1152,8 +1155,8 @@ body .ui-tooltip {
 .display-block {
     display: block !important;
 }
-/* Google Docs */
-.googledocs-integration-columns {
+/* Google Sheets */
+.googlesheets-columns {
     vertical-align: middle;
     line-height: 31px;
 }
